Version: 2.18.5
Date: 2020-05-28
  Features:
    - Fixed Gizmo's Car Keys interface, so that it will actually work once Pi-C updates.
    - Added compatibility with Unminable Vehicles.  "Make vehicles unminable" setting takes priority over Gizmo's Car Keys setting.
  Changes:
    - Moved migration code to migrations folder and cleaned them up significantly.
  Bugfixes:
    - Fixed that these vehicle flags would not be saved and restored: minable, destructible, operable, rotatable, enable_logistics_while_moving.
    - Fixed that any mod changes would reset Vehicle Wagon tutorial states.
---------------------------------------------------------------------------------------------------
Version: 2.18.4
Date: 2020-05-24
  Bugfixes:
    - Fixed missing dependency on Krastorio2 by moving modded wagons to data-updates. No more dependencies!
    - Fixed that wagons would not always become minable again when GCKI ownership is released.
    - Fixed that wagons would not become update minable state when GCKI mod was uninstalled or GCKI Permission setting changed.
    - Fixed that vehicle color would not be reset if unloaded after GCKI ownership was released.
---------------------------------------------------------------------------------------------------
Version: 2.18.3
Date: 2020-05-23
  Features:
    - Added (beta) compatibility with Gizmo's Cark Keys (Improved). Locked and claimed vehicles can only be loaded or unloaded by their owner.
    - Added new scaled sprites for Schall Light Tank and Schall Heavy Tank, with matching wagon weights.
    - Added startup settings to adjust braking and friction force of vehicle wagons.
    - Added startup setting to control maximum weight of load-able vehicles.
    - Added compability with Krastorio 2 Advanced Tank (beta graphics), if you change the Maximum Weight to more than 150000.
    - Added alt-mode icons showing what vehicle is loaded in each wagon.